# redispeech

./: .gitignore  Dockerfile  Dockerfile-python  Dockerfile-python-test  Dockerfile-rust  Dockerfile-rust-test  Dockerfile-test  README.md  config.json  docker-compose.yml  requirements.txt
python/: Dockerfile  Dockerfile-test  README.md  docker-compose.yml  requirements.txt
python/src/: main.py
python/test/: test.py  test_pika.py
rust/: Cargo.toml  Dockerfile  Dockerfile-test  README.md  config.json  docker-compose.yml
rust/src/: main.rs
src/: main.py
test/: test.py
