[package]
name = "rust"
version = "0.1.0"
authors = ["Jack Frost <j4qfrost@gmail.com>"]
edition = "2018"

[dependencies]
deepspeech = { git = "https://github.com/RustAudio/deepspeech-rs.git" }
scrap_merchant = { git = "https://github.com/Knights-of-the-Functional-Calculus/scrap_merchant.git" , branch = "develop", version = "0.1.3" }
audrey = "0.2"
serde = "1.0.94"
serde_json = "1.0.40"